<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_profile_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="color.test.roha.com.colortestproject.ProfileDialogActivity"
    android:background="@color/White"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:gravity="center"
        android:lineSpacingMultiplier="1.2"
        android:text="@string/profile_dialog_title"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_margin="10dp"
        android:textColor="@color/Black"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.45"
        android:gravity="center"
        >

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:scaleType="fitCenter"
            android:src="@drawable/img_profile_dialog_sample" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.35"
        android:orientation="horizontal"
        android:background="@drawable/border_4"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            >
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/btn_profile_dialog_camera_selector"
                android:scaleType="fitCenter"
                android:background="@null"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_dialog_take_pic"
                android:textStyle="bold"
                android:textColor="@color/Black"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                />

        </LinearLayout>


        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/DeepLightGrey"
            android:layout_weight="0"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            >
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/btn_profile_dialog_gallery_selector"
                android:scaleType="fitCenter"
                android:text="@string/app_name"
                android:background="@null"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_dialog_open_gallery"
                android:textStyle="bold"
                android:textColor="@color/Black"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:orientation="horizontal"
        android:background="@drawable/border_4"
        android:gravity="right|center_vertical"
        android:padding="10dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_time"
            android:gravity="center"
            android:textColor="@color/Black"
            android:textSize="16sp"
            />

    </LinearLayout>


</LinearLayout>
