<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_auth_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="color.test.roha.com.colortestproject.AuthMainActivity"
    android:orientation="vertical"
    android:background="@android:color/white"
    >

    <include layout="@layout/view_common_top" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="10dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:padding="10dp"
            android:text="@string/auth_pin_code_intruction"
            android:layout_marginBottom="30dp"
            />

        <TextView
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/dgts__country_code_margin_bottom"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:gravity="center"
            android:background="@drawable/border"
            android:textColor="@android:color/black"
            android:padding="10dp"
            />

        <EditText
            android:id="@+id/pin_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:textCursorDrawable="@drawable/color_cursor"
            android:inputType="numberDecimal"
            android:hint="@string/auth_pin_code_hint"
            android:textColorHint="@color/light_grey"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/timer"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:background="@drawable/img_btn_bg_grey"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            />

    </LinearLayout>

    <Button
        android:id="@+id/btnSendAuthPinCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/confirm_auth_code"
        android:background="@drawable/btn_orange_selector"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        />

</LinearLayout>
